--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "developer tinder",
   "main": "index.js",
   "scripts": {
+    "start":"node src/app.js",
+    "dev": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "piyush",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongodb": "^6.14.2",
     "mongoose": "^8.12.1"
