--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://piyu5496:SWwl8U8Dby1vdDil@namastenode.hkw0v.mongodb.net/?retryWrites=true&w=majority&appName=namasteNode
+MONGO_URI=mongodb+srv://piyu5496:SWwl8U8Dby1vdDil@namastenode.hkw0v.mongodb.net/devTinder
 PORT=3023
 
 
